test_suite/tests/macros/display_case/derive_struct.rs
use macros::DisplayCase;

#[derive(DisplayCase)]
#[display_case(case = "lowercase")]
struct Test {
    foo: String,
    bar: i32,
}

fn main() {}
